# Launcher

./: .clang-format  .gitignore  CMakeLists.txt
CMake/: WebView.cmake
CMake/modules/: FindMSWebView2.cmake
Frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
Frontend/src/: App.tsx  fonts.css  index.css  main.tsx
Frontend/src/App/: index.tsx  styles.module.css
Frontend/src/types/: chrome.d.ts  webview.d.ts
Source/: Application.cpp  Application.hpp  Assert.cpp  CommandLine.cpp  StdAfx.hpp  WebAssets.cpp  WebAssets.cpp.in  WebAssets.hpp  WebView.hpp  WebViewHandler.cpp  WebViewHandler.hpp  WebViewProvider.cpp  WebViewProvider.hpp  WinMain.cpp
Source/Common/: Box.hpp  CO.hpp  StdAfx.hpp  String.cpp  String.hpp
Source/Common/COM/: CO.hpp
Source/Common/Encodings/: Utf16Base.hpp  Utf8.hpp
Source/Common/Logging/: Asserts.cpp  Logging.cpp  Logging.hpp  Win32.cpp  Win32.hpp  utils.hpp
Source/Launcher/: Application.cpp  Application.hpp  CommandLine.cpp  CommandLine.hpp  WebAssets.cpp  WebAssets.hpp  WebViewHandler.cpp  WebViewHandler.hpp  WebViewProvider.cpp  WebViewProvider.hpp  WinMain.cpp
